--- a/style.css
+++ b/style.css
@@ -1,124 +1,86 @@
 *{
-	margin: 0;
 	padding: 0;
+	margin: 0;
 	box-sizing: border-box;
+	font-family: "popplis", sans-serif;
 }
-body{
-	font-family: 'Roboto' sans-serif;
-}
-:root{
-	--primary-color: #f78f7d;
-	--secondry-color: #f6bcad;
-	--info-color: #ffdcd4;
-}
-a{
-	text-decoration: none;
-}
-.container{
+.header{
 	width: 100%;
-	max-width: 1140px;
-	margin: 0 auto;
-}
-.d-flex{
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-}
-header{
+	height: 100vh;
+	background-color: blue;
+	color: white;
+	padding: 0 8.5%;
 	position: relative;
-	height: 83px;
-	width: 100%
 }
 nav{
-	height: 83px;
-	width: 100%;
-	padding: 20px 0px;
-}
-.brand{
-	color: #021300;
-	font-size: 30px;
-	text-transform: capitalize;
-	font-weight: 900;
-	margin-left: 20px;
-	font-family: 'permanent', cursive;
-}
-.text-brand{
-	color: var(--primary-color);
-}
-.navigation-bar ul{
-	margin: 0px;
-	padding: 0px;
-}
-.navigation-bar ul li{
-	display: inline-block;
-	margin: 0px 25px;
-}
-.navigation-bar ul li:last-child{
-	margin-right: 0px;
-
-}
-.navigation-bar ul li a{
-	color: #222222;
-	font-size: 16px;
-	font-weight: normal;
-	font-weight: 600px;
-	text-transform: capitalize;
-}
-.navigation-bar ul li a:hover{
-	color: var(--primary-color);
-	border-bottom: var(--secondry-color);
-}
-.btn{
-	display: inline-block;
-	padding: 10px;
-	color: #222222;
-	background-color: var(--info-color);
-	border-radius: 5px;
-	font-weight: normal;
-	font-weight: 600;
-}
-.navigation-bar ul li a.btn:hover{
-	background-color: var(--primary-color);
-	color: #fff;
-}
-/*show-case*/
-.show-case{
-	width: 100%;
-	font-weight: 500;
-	font-size: 36px;
-	font-family: "times new roman";
-	text-align: center;
-	margin-top: 50px;
-	line-height: 40px;
-}
-.img{
-	width: 350px;
-	height: 260px;
-	border-radius: 50px;
-	align-items: center;
-	justify-content: center;
-	margin-top: 20px;
-}
-.show-case i{
-	font-size: 20px;
-	color: oranged;
-	text-decoration: underline;
-}
-.footer-menu{
-	font-size: 16px;
-	background-color: lightblue;
-	width: 100%;
-	text-align: center;
-}
-.footer-menu ul{
 	display: flex;
-	list-style: none;
+	width: 100%;
 	align-items: center;
-	justify-content: center;
+	flex-wrap: wrap;
+	padding: 5px 0 10px;
 }
-.footer-menu ul li a{
+.logo{
+	width: 150px;
+	cursor: pointer;
+}
+.menu-icon{
+	width: 100px;
+	cursor: pointer;
+	padding-right: 20px;
+}
+nav ul{
+	flex: 1;
+	text-align: right;
+	padding-right: 40px;
+}
+nav ul li{
+	display: inline-block;
+	list-style: none;
+	margin: 10px 30px;
+}
+nav ul li a{
+	color: white;
 	text-decoration: none;
-	text-align: center;
-	margin: 5px;
+	letter-spacing: 1;
+	font-size: 20px;
 }
-
+nav ul li a:hover{
+	color: red;
+}
+nav a img:hover{
+	transform: scale(1.1);
+}
+.text-box h1{
+	font-size: 60px;
+	line-height: 100px;
+	padding-top: 5%;
+}
+.text-box{
+	text-align: center;
+	border: 1px dotted black;
+	margin-right: 50px;
+}
+.text-box a{
+	margin-top: 30px;
+	display: inline-block;
+	border-radius: 20px;
+	background-color: grey;
+	color: white;
+	padding: 10px;
+	text-decoration: none;
+	width: 200px;
+	text-align: center;
+	font-size: 20px;
+	box-align: center;
+}
+.text-box a:hover{
+	background-color: white;
+	color: blue;
+	transform: scale(1.1);
+}
+.man{
+	width: 320px;
+	position: absolute;
+	right: 0%;
+	bottom: 0%;
+}
